<resources>
    <string name="app_name">Your Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tv_search">Searching Page</string>
    <string name="btn_allmeals">Search By Meal</string>
    <string name="btn_area">Search By Area</string>
    <string name="btn_gradiant">Search By Ingredient</string>
    <string name="btn_gategory">Search By Category</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tv_Email" />
    <string name="hint_email">ENTER YOUR EMAIL</string>
    <string name="tb_email">email</string>
    <string name="tb_email2" />
    <string name="tb_password">passwrod</string>
    <string name="tv_pass" />
    <string name="hint_pass">ENTER YOUR PASSWORD</string>
    <string name="hintEmail">ENTER YOUR EMAIL</string>
    <string name="tb_passwordd" />
    <string name="bt_login">Log in</string>
    <string name="bt_log_in">Login</string>
    <string name="tv_signup">Don\'t have account</string>
    <string name="tv_regester">Sign Up</string>
    <string name="signUp2">Don\'t have an account?</string>
    <string name="tv_signinwithgoogle">You Can Use</string>
    <string name="btn_guest">Guest</string>
    <string name="tv_regestration">Regestration Page</string>
    <string name="tb_userName">username</string>
    <string name="hint_username">ENTER YOUR USER NAME</string>
    <string name="tb_confirm_pass" />
    <string name="hint_confrm_pass">CONFIRM YOUR PASSWORD</string>
    <string name="tv_registration">Registration</string>
    <string name="tv_Registarion">Registration Page</string>
    <string name="bt_signup">signup</string>
    <string name="btn_sign_up">Signup</string>
    <string name="tv_login">Login Page</string>
    <string name="spinner_content_description">"list of days "</string>
    <string name="btn_addToFavourite">Add To Favourite</string>
    <string name="tv_favouritePage">Favourite Page</string>
    <string name="tv_favourite_meal_name" />
    <string name="tv_FavMealName">meal</string>
    <string name="btn_remove_from_fav">Removing meal from favourite</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="instarctions">Instractions</string>
    <string name="DropDawn_hint">Add To Plane</string>
    <string name="hint_search">"Search For a Meal "</string>

    <string-array name="days">
        <item>"Select the day you want"</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>

    </string-array>
</resources>