<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.SearchActivity">


    <Button
        android:id="@+id/btn_allmeals"
        android:layout_width="376dp"
        android:layout_height="142dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFBF00"
        android:drawableLeft="@drawable/allmeals"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/btn_allmeals"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_area"
        android:layout_width="376dp"
        android:layout_height="142dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFBF00"
        android:drawableLeft="@drawable/world"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/btn_area"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_allmeals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_allmeals"
        app:layout_constraintTop_toBottomOf="@+id/btn_allmeals" />


    <Button
        android:id="@+id/btn_gategory"
        android:layout_width="376dp"
        android:layout_height="142dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFBF00"
        android:drawableLeft="@drawable/cat"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/btn_gategory"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ingradiant"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_ingradiant"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingradiant" />

    <Button
        android:id="@+id/btn_ingradiant"
        android:layout_width="376dp"
        android:layout_height="142dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFBF00"
        android:drawableLeft="@drawable/ing"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/btn_gradiant"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gategory"
        app:layout_constraintEnd_toEndOf="@+id/btn_area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_area"
        app:layout_constraintTop_toBottomOf="@+id/btn_area" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@android:color/holo_orange_light"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>